Fixed footer overflow.

--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@ body {
     font-family: "Nunito";
     margin: 0;
     padding: 0;
+    overflow-x: hidden;
 }
 
 caption {
